# downloads-organizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
downloads_organizer/: __init__.py  app.py  main.py
downloads_organizer/classifier/: __init__.py  base.py  chain.py  content.py  extension.py
downloads_organizer/config/: __init__.py  default_config.yaml  loader.py  schema.py
downloads_organizer/core/: __init__.py  pipeline.py
downloads_organizer/journal/: __init__.py  journal.py  stats.py  undo.py
downloads_organizer/logger/: __init__.py  setup.py
downloads_organizer/mover/: __init__.py  mover.py
downloads_organizer/notifications/: __init__.py  notifier.py
downloads_organizer/plugins/: __init__.py  base.py  registry.py
downloads_organizer/rules/: __init__.py  filename.py  url.py
downloads_organizer/utils/: fsutils.py
downloads_organizer/watcher/: __init__.py  stability.py  watcher.py
packaging/: downloads-organizer.desktop  downloads-organizer.service
tests/: conftest.py  test_classifier.py  test_config.py  test_content.py  test_integration_watcher.py  test_journal.py  test_mover.py  test_pipeline.py  test_rules.py  test_stability.py  test_url_rules.py  test_utils.py
